# ghidra-mcp

./: README.md  pyproject.toml
ghidra_mcp/: server.py  util.py
ghidra_mcp/tools/: read.py  vc6_fixes.py  write.py
