[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ghidra-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26",
    "pyghidra",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ghidra_mcp*"]

[tool.uv.sources]
pyghidra = { path = "../../../home/drazisil/ghidra_12.0.3_PUBLIC/Ghidra/Features/PyGhidra/pypkg" }
